--- a/src/app/features/Jobs/add-job/add-job.html
+++ b/src/app/features/Jobs/add-job/add-job.html
@@ -1,3 +1,8 @@
+<div class="nav">
+    <a routerLink="/empDashboard"><i class="bi bi-arrow-left me-3 fs-3"></i> </a>
+    <h5 class="mt-2">Back to Dashboard</h5>
+</div>
+
 <div class="container mt-5 mb-5">
     <div class="row">
         <div class="col-lg-10 mx-auto">
