--- a/src/app/features/profiles/employer/employer-analytics-section/employer-analytics-section.html
+++ b/src/app/features/profiles/employer/employer-analytics-section/employer-analytics-section.html
@@ -79,65 +79,12 @@
             <h3><i class="bi bi-people me-2"></i> Top Performing Jobs</h3>
           </div>
           <div class="card-body">
-            <div class="job-card">
-                <div class="d-flex justify-content-between mb-2">
-                    <div class="d-flex">
-                        <i class="bi bi-code-slash"></i>
-                        <h6>Senior Frontend Developer</h6>
-                    </div>
-                    <div>
-                        <span class="badge bg-primary float-end">7.1%</span>
-                    </div>
+            <div class="job-card" *ngFor="let job of topPerformingJobs()">
+                <div class="d-flex">
+                    <h6>{{job.title}}</h6>
                 </div>
-                <span>89 applications</span>
-            </div>
-            <div class="job-card">
-                <div class="d-flex justify-content-between mb-2">
-                    <div class="d-flex">
-                        <i class="bi bi-hdd-network"></i>
-                        <h6>DevOps Engineer</h6>
-                    </div>
-                    <div>
-                        <span class="badge bg-primary float-end">6.8%</span>
-                    </div>
-                </div>
-                <span>67 applications</span>
-            </div>
-            <div class="job-card">
-                <div class="d-flex justify-content-between mb-2">
-                    <div class="d-flex">
-                        <i class="bi bi-clipboard-data"></i>
-                        <h6>Product Manager</h6>
-                    </div>
-                    <div>
-                        <span class="badge bg-primary float-end">7.1%</span>
-                    </div>
-                </div>
-                <span>134 applications</span>
-            </div>
-            <div class="job-card">
-                <div class="d-flex justify-content-between mb-2">
-                    <div class="d-flex">
-                        <i class="bi bi-server"></i>
-                        <h6>Backend Developer</h6>
-                    </div>
-                    <div>
-                        <span class="badge bg-primary float-end">7.0%</span>
-                    </div>
-                </div>
-                <span>78 applications</span>
-            </div>
-            <div class="job-card">
-                <div class="d-flex justify-content-between mb-2">
-                    <div class="d-flex">
-                        <i class="bi bi-brush"></i>
-                        <h6>UX Designer</h6>
-                    </div>
-                    <div>
-                        <span class="badge bg-primary float-end">6.7%</span>
-                    </div>
-                </div>
-                <span>45 applications</span>
+
+                <span>{{job.applicationsCount}} applications</span>
             </div>
           </div>
         </div>
