--- a/src/app/features/profiles/employer/employer-dashbord-section/employer-dashbord-section.html
+++ b/src/app/features/profiles/employer/employer-dashbord-section/employer-dashbord-section.html
@@ -26,7 +26,7 @@
                 <div class="card card-custom p-4 quick-actions">
                     <h3 class="mb-3 fw-bold mb-4">⭐ Quick Actions</h3>
                     <a class="btn btn-primary" routerLink="/addJob">+ Post New Job Opening</a>
-                    <a class="btn btn-outline-secondary">📄 Review Applications</a>
+                    <a class="btn btn-outline-secondary" routerLink="/appViewEmp">📄 Review Applications</a>
                     <a class="btn btn-outline-secondary" routerLink="/empAnalytics" >📊 View Analytics</a>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                     <div class="card card-custom p-4">
                     <div class="d-flex justify-content-between align-items-center mb-2">
                         <h3>💼 Recent Job Postings</h3>
-                        <a href="#" class="text-primary fw-semibold"  style="text-decoration: none;">Manage Jobs →</a>
+                        <a routerLink="/empPostedJobs" class="text-primary fw-semibold"  style="text-decoration: none;">Manage Jobs →</a>
                     </div>
 
                     <div *ngFor="let job of recentJobs()" class="activity-item d-flex justify-content-between align-items-center mb-2 p-3 border rounded shadow-sm">
