--- a/src/app/features/Application/app-view-seeker/app-view-seeker.html
+++ b/src/app/features/Application/app-view-seeker/app-view-seeker.html
@@ -1,1 +1,58 @@
-<p>app-view-seeker works!</p>
+<div>
+    <div class="header-section">
+        <div class="title-container">
+            <div class="d-flex">
+                <div class="icon">
+                    <i class="bi bi-buildings"></i>
+                </div>
+                <div>
+                    <h1 class="mt-2">Application Inbox</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+
+        <div class="applications-section my-3">
+            <div *ngIf="isLoading()" class="loading">Loading applications...</div>
+
+            <div *ngIf="!isLoading()" class="results-container">
+                <div class="results-info">
+                    <h5>{{applicationsList().length}} Application{{applicationsList().length !== 1 ? 's' : ''}} found</h5>
+                </div>
+
+
+                <div *ngIf="applicationsList().length > 0" class="application-list">
+                    <div *ngFor="let app of applicationsList(); trackBy: trackByApplicationId" class="application-card">
+                        <div class="card-left row">
+                            <div class="col-lg-1">
+                                <img src="{{app.companyImage}}"> 
+                            </div>
+                            <div class="applicant-info col-lg-8" >
+                                <div class="d-flex">
+                                    <h4 style="padding-top: 2px;">{{app.jobTitle}}</h4>
+                                </div>
+                                <div class="d-flex">
+                                    <p>{{app.companyName}} - </p><p style="color:rgb(123, 122, 122)">{{app.companyLocation}}</p>
+                                </div>
+                                <div class="d-flex mt-2">
+                                    <i class="bi bi-calendar-check me-2 mt-1"></i><p class="mt-1">{{app.appliedDate}}</p>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="card-right">
+
+                            <span class="status" [ngClass]="getStatusClass(app.status)">
+                                {{app.status}}
+                            </span>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
