--- a/src/app/features/app-admin-dashboard/admin-dashboard-analytics/admin-dashboard-analytics.html
+++ b/src/app/features/app-admin-dashboard/admin-dashboard-analytics/admin-dashboard-analytics.html
@@ -1,5 +1,5 @@
 <!-- Job Board Admin Dashboard -->
-<mat-card class="analytics-dashboard-card">
+<div class="analytics-dashboard-card mx-auto">
   <mat-card-header>
     <mat-card-title style="color: aliceblue;">Admin Dashboard</mat-card-title>
     <mat-card-subtitle>Manage users and jobs across the platform</mat-card-subtitle>
@@ -485,4 +485,4 @@
       </div>
     </div>
   </mat-card-content>
-</mat-card>
+</div>
