--- a/src/app/features/Home/home/home.html
+++ b/src/app/features/Home/home/home.html
@@ -123,7 +123,7 @@
                         <span>Active Jobs</span>
                         <div class="d-flex align-items-center">
                             <h3>{{ formatNumber(stats().activeJobs) }}</h3>
-                            <!-- <span style="color: green;">+12%</span> -->
+                            <span style="color: green;">{{ formatNumber(stats().activeJobsGrowth) }}%</span>
                         </div>
                         <span>New Opportunities Daily</span>
                     </div>
@@ -140,7 +140,7 @@
                         <span>Companies</span>
                         <div class="d-flex align-items-center">
                             <h3>{{ formatNumber(stats().totalEmployers) }}</h3>
-                            <!-- <span style="color: green;">+8%</span> -->
+                            <span style="color: green;">{{ formatNumber(stats().jobsGrowth) }}%</span>
                         </div>
                         <span>Top Opportunities Worldwide</span>
                     </div>
@@ -156,7 +156,7 @@
                         <span>Success Rate</span>
                         <div class="d-flex align-items-center">
                             <h3>{{ calculateSuccessRate() }}</h3>
-                            <!-- <span style="color: green;">+5%</span> -->
+                            <span style="color: green;">{{ formatNumber(stats().approvedJobs) }}%</span>
                         </div>
                         <span>Job Placement Success</span>
                     </div>
