--- a/src/app/features/profiles/employer/employer-dashbord-section/employer-dashbord-section.css
+++ b/src/app/features/profiles/employer/employer-dashbord-section/employer-dashbord-section.css
@@ -1,4 +1,3 @@
-
 body {
     background-color: #f8f9ff;
     font-family: "Inter", sans-serif;
@@ -32,15 +31,17 @@ body {
 
 .activity-item {
     padding: 12px;
+    background-color: #f7f7f7;
     border-bottom: 1px solid #f1f1f1;
     transition: all 0.3s;
     margin-bottom: 10px;
+    border-radius: 15px;
 }
 .activity-item:last-child {
     border-bottom: none;
 }
 .activity-item:hover{
-    background-color: #f7f7f7;
+    background-color: #ebebeb;
     border-radius: 15px;
     transform: translateX(5px);
 }
