--- a/src/app/features/profiles/employer/employer-dashbord-section/employer-dashbord-section.html
+++ b/src/app/features/profiles/employer/employer-dashbord-section/employer-dashbord-section.html
@@ -39,34 +39,18 @@
                 <!-- Recent Activity -->
                 <div class="col-12">
                     <div class="card card-custom p-4">
-                    <div class="d-flex justify-content-between align-items-center mb-2">
-                        <h3 >📌 Recent Activity</h3>
-                    </div>
-                    <div class="activity-item">
-                        <strong class="fs-5">New application received</strong>
-                        <p class="text-muted mb-1 ">Sarah Chen applied for Senior Frontend Developer</p>
-                        <small class="text-muted">2 minutes ago</small>
-                    </div>
-                    <div class="activity-item">
-                        <strong class="fs-5">Interview scheduled</strong>
-                        <p class="text-muted mb-1">Interview with Alex Rodriguez for DevOps Engineer</p>
-                        <small class="text-muted">1 hour ago</small>
-                    </div>
-                    <div class="activity-item">
-                        <strong class="fs-5">Candidate hired</strong>
-                        <p class="text-muted mb-1">Emma Wilson accepted offer for Product Manager</p>
-                        <small class="text-muted">3 hours ago</small>
-                    </div>
-                    <div class="activity-item">
-                        <strong class="fs-5">New application received</strong>
-                        <p class="text-muted mb-1">Michael Brown applied for Backend Developer</p>
-                        <small class="text-muted">6 hours ago</small>
-                    </div>
-                    <div class="activity-item">
-                        <strong class="fs-5">Application under review</strong>
-                        <p class="text-muted mb-1">Lisa Park’s application moved to review stage</p>
-                        <small class="text-muted">1 day ago</small>
-                    </div>
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <h3 >📌 Recent Activity</h3>
+                        </div>
+                        <div *ngIf="recentActivity().length === 0">
+                            <p>No recent activity available.</p>
+                        </div>
+                            @for(activity of recentActivity(); track $index){
+                                <div class="activity-item" *ngIf="activity.link" (click)="viewNotification(activity.link)">
+                                    <p class="fs-5 fw-medium mb-0">{{ activity.message }}</p>
+                                    <small class="mt-0">{{ getTimeDifference(activity.createdAt) }}</small>
+                                </div>
+                            }
                     </div>
                 </div>
 
@@ -82,9 +66,9 @@
                     <div>
                         <strong class="fs-5">{{ job.title }}</strong>
                         <div class="d-flex">
-                            <div class="text-muted small">{{ job.postedAgo}}</div>
-                            <div class="mx-">|</div>
-                            <div class="text-muted small">Applications: {{ job.applicationsCount }}</div>
+                            <div class="text-muted small mt-1">{{ job.postedAgo}}</div>
+                            <div class="mx-1">|</div>
+                            <div class="text-muted small mt-1">Applications: {{ job.applicationsCount }}</div>
                         </div>
                     </div>
                     <span class="job-status" [ngClass]="{
