--- a/src/app/shared/components/navbar-emp/navbar-emp.css
+++ b/src/app/shared/components/navbar-emp/navbar-emp.css
@@ -267,6 +267,10 @@
   flex: 1;
   min-width: 0;
 }
+.notification-content:hover{
+  cursor: pointer;
+}
+
 
 .notification-message {
   font-size: 14px;
