--- a/src/app/shared/components/navbar/navbar.css
+++ b/src/app/shared/components/navbar/navbar.css
@@ -239,6 +239,10 @@
   flex: 1;
   min-width: 0;
 }
+.notification-content:hover{
+  cursor: pointer;
+}
+
 
 .notification-message {
   font-size: 14px;
