--- a/src/app/shared/components/navbar/navbar.html
+++ b/src/app/shared/components/navbar/navbar.html
@@ -36,7 +36,7 @@
       <div class="d-flex align-items-center">
 
 
-        <div class="notification-container">
+        <div class="notification-container" *ngIf="isloggedIn()">
     <button class="notification-bell" (click)="toggleDropdown()" title="Notifications">
       <i class="bi bi-bell bell-icon"></i>
       <span class="notification-badge" [class.show]="unreadCount() > 0">
@@ -60,11 +60,8 @@
       <div class="notifications-list" *ngIf="notifications().length; else emptyState">
         <div class="notification-item" *ngFor="let notification of notifications(); let i = index"
              [class.unread]="!notification.isRead">
-          <div class="notification-content">
+          <div class="notification-content" *ngIf="notification.link" (click)="viewNotification(notification.link)">
             <p class="notification-message">{{ notification.message }}</p>
-            <small class="notification-link" *ngIf="notification.link" (click)="viewNotification(notification.link)">
-              View
-            </small>
             <div class="notification-meta">
               <span>{{ getTimeDifference(notification.createdAt + 'Z') }}</span>
             </div>
