--- a/src/app/features/profiles/employer/employer-profile-section/employer-profile-section.html
+++ b/src/app/features/profiles/employer/employer-profile-section/employer-profile-section.html
@@ -82,16 +82,6 @@
                 {{empData().companyMission ? empData().companyMission : 'No Company Mission Provided Yet!'}}
                 </div>
             </div>
-            <div class="mt-3">
-                <div style="color: rgb(161, 161, 161); margin-bottom: 5px;"> Values </div>
-                <div class="row">
-                    <div class="value">Innovation</div>
-                    <div class="value">Integrity</div>
-                    <div class="value">Collaboration</div>
-                    <div class="value">Excellence</div>
-                    <div class="value">Customer Focus</div>
-                </div>
-            </div>
         </section>
 
 
@@ -101,15 +91,15 @@
             <div class="d-flex mt-4">
                 <div class="me-3">
                     <i class="bi bi-linkedin me-2 text-primary"></i>
-                    <a href="https://www.linkedin.com/feed/">LinkedIn</a>
+                    <a href="https://www.linkedin.com/feed/" target="_blank" style="text-decoration: nono;">LinkedIn</a>
                 </div>
                 <div class="me-3">
-                    <i class="bi bi-twitter me-2 text-primary"></i>
-                    <a href="https://x.com/">Twitter</a>
+                    <i class="bi bi-twitter me-2 text-primary" ></i>
+                    <a href="https://x.com/" target="_blank" style="text-decoration: nono;">Twitter</a>
                 </div>
                 <div>
                     <i class="bi bi-facebook me-2 text-primary"></i>
-                    <a href="https://www.facebook.com/">Facebook</a>
+                    <a href="https://www.facebook.com/" target="_blank" style="text-decoration: nono;">Facebook</a>
                 </div>
             </div>
         </div>
