--- a/src/app/features/profiles/employer/employer-analytics-section/employer-analytics-section.html
+++ b/src/app/features/profiles/employer/employer-analytics-section/employer-analytics-section.html
@@ -1,75 +1,70 @@
 <body>
   <div class="container mt-2">
-    <!-- Metrics Row -->
-    <div class="row g-4">
-      <div class="col-md-3">
-        <div class="metric-card">
-            <div class="d-flex justify-content-between mb-3">
-                <div class="d-flex ">
-                    <i class="bi bi-graph-up me-2"></i>
-                    <h6>Application Rate</h6>
-                </div>
-                <div>
-                    <span class="badge bg-success ms-2">{{employerAnalytics().applicationRateChange}}%</span>
-                </div>
-            </div>
-            <h2>{{employerAnalytics().applicationRate}} % <small>vs last month</small></h2>
-        </div>
-      </div> 
-
-      <div class="col-md-3">
-        <div class="metric-card">
-            <div class="d-flex justify-content-between mb-3">
-                <div class="d-flex ">
-                    <i class="bi bi-eye me-2"></i>
-                    <h6>Profile Views</h6>
-                </div>
-                <div>
-                    <span class="badge bg-success ms-2">{{employerAnalytics().profileViewsChange}}</span>
-                </div>
-            </div>
-            <h2>{{employerAnalytics().profileViews}} <small>this month</small></h2>
-        </div>
-      </div>
-
-      <div class="col-md-3">
-        <div class="metric-card">
-            <div class="d-flex justify-content-between mb-3">
-                <div class="d-flex ">
-                    <i class="bi bi-clock-history me-2"></i>
-                    <h6>Time to Hire</h6>
-                </div>
-            </div>
-            <h2>{{employerAnalytics().timeToHire}} days <small>average</small></h2>
-        </div>
-      </div>
-
-      <div class="col-md-3">
-        <div class="metric-card">
-            <div class="d-flex justify-content-between mb-3">
-                <div class="d-flex ">
-                    <i class="bi bi-check2-circle me-2"></i>
-                    <h6>Hire Success Rate</h6>
-                </div>
-                <div>
-                    <span class="badge bg-success ms-2">{{employerAnalytics().hireSuccessRateChange}}%</span>
-                </div>
-            </div>
-            <h2>{{employerAnalytics().hireSuccessRate}}% <small>vs last quarter</small></h2>
-        </div>
-      </div>
-    </div>
-
     <!-- Chart + Jobs -->
-    <div class="row mt-4 g-4">
+    <div class="row mt-4">
 
       <div class="col-md-6">
-        <div class="trend-card">
-          <h3><i class="bi bi-bar-chart-fill me-2"></i> Applications & Hires Trend</h3>
-          <canvas id="trendChart" height="200"></canvas>
+        <!-- Metrics Row -->
+        <div class="row g-4">
+          <div class="col-md-6">
+            <div class="metric-card">
+                <div class="d-flex justify-content-between mb-3">
+                    <div class="d-flex ">
+                        <i class="bi bi-graph-up me-2"></i>
+                        <h6>Application Rate</h6>
+                    </div>
+                    <div>
+                        <span class="badge bg-success ms-2">{{employerAnalytics().applicationRateChange}}%</span>
+                    </div>
+                </div>
+                <h2>{{employerAnalytics().applicationRate}} % <small>vs last month</small></h2>
+            </div>
+          </div> 
+
+          <div class="col-md-6">
+            <div class="metric-card">
+                <div class="d-flex justify-content-between mb-3">
+                    <div class="d-flex ">
+                        <i class="bi bi-eye me-2"></i>
+                        <h6>Profile Views</h6>
+                    </div>
+                    <div>
+                        <span class="badge bg-success ms-2">{{employerAnalytics().profileViewsChange}}</span>
+                    </div>
+                </div>
+                <h2>{{employerAnalytics().profileViews}} <small>this month</small></h2>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="metric-card">
+                <div class="d-flex justify-content-between mb-3">
+                    <div class="d-flex ">
+                        <i class="bi bi-clock-history me-2"></i>
+                        <h6>Time to Hire</h6>
+                    </div>
+                </div>
+                <h2>{{employerAnalytics().timeToHire}} days <small>average</small></h2>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="metric-card">
+                <div class="d-flex justify-content-between mb-3">
+                    <div class="d-flex ">
+                        <i class="bi bi-check2-circle me-2"></i>
+                        <h6>Hire Success Rate</h6>
+                    </div>
+                    <div>
+                        <span class="badge bg-success ms-2">{{employerAnalytics().hireSuccessRateChange}}%</span>
+                    </div>
+                </div>
+                <h2>{{employerAnalytics().hireSuccessRate}}% <small>vs last quarter</small></h2>
+            </div>
+          </div>
         </div>
       </div>
-    
+      
       <div class="col-md-6">
         <div class="card card-custom p-3 shadow">
           <div class="card-header bg-white border-0">
