--- a/src/app/features/Jobs/saved-jobs/saved-jobs.html
+++ b/src/app/features/Jobs/saved-jobs/saved-jobs.html
@@ -106,7 +106,7 @@
       Start saving jobs that interest you to create your personal collection.<br>
       You can find jobs to save on the main jobs page.
     </p>
-    <a routerLink="/jobs" class="btn btn-primary">
+    <a routerLink="/explore" class="btn btn-primary">
       <i class="bi bi-search me-2"></i>
       Browse Jobs
     </a>
