--- a/src/app/shared/components/navbar/navbar.html
+++ b/src/app/shared/components/navbar/navbar.html
@@ -16,7 +16,7 @@
 
     <!-- Navbar Content -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0" *ngIf="isSeeker()">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0" *ngIf="isSeeker()">
         <!-- Explore Link -->
         <li class="nav-item">
           <a class="nav-link fw-medium" routerLink="/explore" routerLinkActive="active">EXPLORE</a>
@@ -33,7 +33,7 @@
       </ul>
 
       <!-- Auth Buttons -->
-      <div class="d-flex align-items-center">
+      <div class="d-flex align-items-center gap-1 ms-auto">
 
 
         <div class="notification-container" *ngIf="isloggedIn()">
